# smartmonkey-highway

./: .env.sample  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
highway/: __init__.py  utils.py
tests/: conftest.py  test_highway.py
